--- a/golddigger/pubspec.yaml
+++ b/golddigger/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  font_awesome_flutter: ^10.8.0
 
 dev_dependencies:
   flutter_test:
@@ -57,6 +58,7 @@ flutter:
     - assets/maincarousel1.png
     - assets/maincarousel2.png
     - assets/maincarousel3.png
+    - assets/login.png
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
